--- a/WebAppEs/appsettings.json
+++ b/WebAppEs/appsettings.json
@@ -1,6 +1,7 @@
 {
 	"ConnectionStrings": {
 		"DefaultConnection": "Server=DESKTOP-PIK65JK;Database=WaltonDB1;User Id=sa;password=Walton@2021;Trusted_Connection=False;MultipleActiveResultSets=true;"
+		//"DefaultConnection": "Server=DESKTOP-QJGK0JC;Database=ProcessDevelopment;User Id=sa;password=W@LTONDB@2021;Trusted_Connection=False;MultipleActiveResultSets=true;"
 	},
 	"Logging": {
 		"LogLevel": {
